# cafe_api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  loki-config.yml  prometheus.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 207c41e0acba_rename_enum_name_identityproviderenum_.py  3d67aa08acf8_created_meal_categories_meals_tables.py  6bc6e78da04f_add_orders_table.py  76d4a146dfcd_remove_unique_constraint_on_meal_name_.py  806fca036767_add_price_to_meals_table_change_created_.py  93a9af2d464b_create_users_and_user_identities_tables.py  9e1e89a2cbf4_make_combination_of_provider_and_.py  ac0a5fe69bf0_create_tables_meal_categories_meals_.py  b6c43997270c_create_meals_and_meal_categories_tables.py  b7d7cbf01602_create_tables_users_and_telegram_user_.py  baca489c2c8f_add_not_null_constraint_on_username_.py  d281ef1e3194_created_meal_categories_meals_tables.py  dd909e4e6039_add_tables_orders_and_order_items.py  e0accec0943c_add_meal_name_field_to_cart_items_table.py  e32031e93d52_add_carts_and_cart_items_tables.py  e83fe620a00e_make_meal_name_field_unique_in_meals_.py  efb2f9045e6d_create_tables_meal_categories_and_meals.py  fd468fc42b66_rename_price_field_into_unit_price_in_.py  ff6faeff2f2a_add_tables_orders_and_order_items_add_.py
nginx/: nginx.template.conf
src/: config.py  database.py  main.py
src/admin/: __init__.py  cart.py  cart_item.py  meal.py  meal_category.py  services.py  site.py  user.py
src/core/: config.py  constants.py  database.py  dependencies.py  exceptions_setup.py  lifespan.py  (+1 more)
(+138 files in other folders)
