[project]
name = "cafe-api"
version = "1.2.0"
description = "A REST API backend service designed for cafes, enabling user management, menu browsing, cart operations, and order processing. Features include JWT authentication, Kafka event-driven integration, and an Amis Admin dashboard for easy system administration"
authors = [
    {name = "AmalSultanov",email = "pogboom1014@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "boto3 (>=1.40.13,<2.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "faststream[kafka] (>=0.5.48,<0.6.0)",
    "fastapi-amis-admin (>=0.7.3,<0.8.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "fastapi-user-auth (>=0.7.3,<0.8.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[tool.poetry.group.dev.dependencies]
ruff = ">=0.12.9,<0.13.0"
fastapi-cli = ">=0.0.8,<0.0.9"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false